@@ -37,6 +37,7 @@ extern int cmnd_lcd(int);
 extern int cmnd_environ(int);
 extern int cmnd_boot(int);
 extern int cmnd_nfs(int);
+extern int cmnd_serial(int);
 
 static int cmnd_arguments(int);
 static int cmnd_help(int);
@@ -89,6 +90,7 @@ static struct
 	{ "variable",		cmnd_environ,		0,					"[name [value]]",											},
 	{ "boot",			cmnd_boot,			0,					"[list | default] [option]",							},
 	{ "nfs",				cmnd_nfs,			0,					"host root [path [path]]",								},
+	{ "serial",			cmnd_serial,		0,					"[rate | default]",										},
 
 #ifdef _DEBUG
 	{ "arguments",		cmnd_arguments,	0,					"[arguments ...]",										},
